--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <article class="card">
                 <div class="card-tag">Robotique</div>
                 <h3>Projets Club Robotique</h3>
-                <p>Conception et programmation de robots autonomes au sein du club de l'établissement.</p>
+                <p>Conception et programmation de robots autonomes au sein du club de l'établissement.(pour la coupe du monde de robotique)</p>
                 <div class="tech-stack">
                     <span>Arduino</span>
                     <span>C++</span>
@@ -92,7 +92,7 @@
         <h2>Compétences Techniques</h2>
         <div class="skills-grid">
             <div class="skill-item">Python (Bases & Algorithmes)</div>
-            <div class="skill-item">Développement Web (HTML/CSS/JS)</div>
+            <div class="skill-item">Développement Web (HTML)</div>
             <div class="skill-item">Gestion de versions (Git/GitHub)</div>
             <div class="skill-item">Anglais Technique</div>
         </div>
